--- a/panels/dashboard.html
+++ b/panels/dashboard.html
@@ -131,15 +131,15 @@
             <div id="dashboard-page" class="">
                 <div style="display: flex; justify-content: space-around; padding: 20px;">
                     <!-- Öğrenci Sayısı -->
-                    <div id="student-count-panel" style="background: #2c3e50;border-radius: 8px; width: 45%; text-align: center; padding: 20px; box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);">
+                    <div id="student-count-panel" style="background: #4723d9;border-radius: 8px; width: 45%; text-align: center; padding: 20px; box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);">
                         <h1>Öğrenci Sayısı</h1>
-                        <p id="student-count" style="font-size: 32px; font-weight: bold;">0</p>
+                        <p id="student-count" style="font-size: 32px; font-weight: bold color: #000;">0</p>
                     </div>
             
                     <!-- Sınıf Sayısı -->
-                    <div id="class-count-panel" style="background: #2c3e50; border-radius: 8px; width: 45%; text-align: center; padding: 20px; box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);">
+                    <div id="class-count-panel" style="background: #4723d9; border-radius: 8px; width: 45%; text-align: center; padding: 20px; box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);">
                         <h1>Sınıf Sayısı</h1>
-                        <p id="class-count" style="font-size: 32px; font-weight: bold;">0</p>
+                        <p id="class-count" style="font-size: 32px; font-weight: bold color: @000; ">0</p>
                     </div>
                 </div>
             </div>
