--- a/panels/dashboard.html
+++ b/panels/dashboard.html
@@ -33,17 +33,17 @@
                     </a>
 
                     <div class="nav__list">
-                        <a href="#" class="nav__link active" onclick="loadStudent()">
+                        <a href="#" id="load-student" class="nav__link active" onclick="loadStudent()">
                         <i  class='bx bx-user nav__icon' ></i>
                             <span class="nav__name"  >Öğrenciler</span>
                         </a>
 
-                        <a href="#"  class="nav__link" onclick="loadUser()">
+                        <a href="#" id="load-user"  class="nav__link" onclick="loadUser()">
                             <i class='bx bx-user nav__icon' ></i>
                             <span class="nav__name" >Kullanıcılar</span>
                         </a>
                         
-                        <a href="#"  class="nav__link" onclick="loadClass()">
+                        <a href="#" id="load-class" class="nav__link" onclick="loadClass()">
                             <i class='bx bx-message-square-detail nav__icon' ></i>
                             <span class="nav__name" >Sınıflar</span>
                         </a>
